--- a/navBar2.css
+++ b/navBar2.css
@@ -48,6 +48,52 @@ nav .nav-items li a:hover{
   color: #26d63b;
 }
 
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+/* .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}  */
+
 nav .searchForm{
   display: flex;
   height: 40px;
@@ -77,6 +123,7 @@ nav .searchForm button{
   border-bottom-right-radius: 12px;
   cursor: pointer;
 }
+
 nav .searchForm button:hover{
   background: #2b9638;
 }
